// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`genie CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > invalid phase 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "Expected one of the following cases: bootstrap, design-time

Error: {"_tag":"InvalidValue","error":{"_tag":"Paragraph","value":{"_tag":"Text","value":"Expected one of the following cases: bootstrap, design-time"}}}
",
  "stdout": "",
}
`;

exports[`genie CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > missing option value 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "Received unknown argument: '--cwd'

Error: {"_tag":"InvalidValue","error":{"_tag":"Paragraph","value":{"_tag":"Text","value":"Received unknown argument: '--cwd'"}}}
",
  "stdout": "",
}
`;

exports[`genie CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > root help 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "genie

genie 0.1.0

USAGE

$ genie [--cwd text] [--watch] [--writeable] [--check] [--dry-run] [--defer-validation] [--phase bootstrap | design-time] [--oxfmt-config file] [(-o, --output auto | tty | alt-screen | ci | ci-plain | log | json | ndjson)]

OPTIONS

--cwd text

  A user-defined piece of text.

  Working directory to search for .genie.ts files

  This setting is optional.

--watch

  A true or false value.

  Watch for changes and regenerate automatically

  This setting is optional.

  This setting is optional.

--writeable

  A true or false value.

  Generate files as writable (default: read-only)

  This setting is optional.

  This setting is optional.

--check

  A true or false value.

  Check if generated files are up to date (for CI)

  This setting is optional.

  This setting is optional.

--dry-run

  A true or false value.

  Preview changes without writing files

  This setting is optional.

  This setting is optional.

--defer-validation

  A true or false value.

  Generate projections before a repair step; the caller must finish with genie --check

  This setting is optional.

  This setting is optional.

--phase bootstrap | design-time

  One of the following: bootstrap, design-time

  Only run generators declaring this phase (bootstrap runs before install; default: all phases)

  This setting is optional.

--oxfmt-config file

  A file.

  Path to oxfmt config file (default: .oxfmtrc.json or oxfmt.json)

  This setting is optional.

(-o, --output auto | tty | alt-screen | ci | ci-plain | log | json | ndjson)

  One of the following: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson

  Output mode: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson

  This setting is optional.

--completions sh | bash | fish | zsh

  One of the following: sh, bash, fish, zsh

  Generate a completion script for a specific shell.

  This setting is optional.

--log-level all | trace | debug | info | warning | error | fatal | none

  One of the following: all, trace, debug, info, warning, error, fatal, none

  Sets the minimum log level for a command.

  This setting is optional.

(-h, --help)

  A true or false value.

  Show the help documentation for a command.

  This setting is optional.

--wizard

  A true or false value.

  Start wizard mode for a command.

  This setting is optional.

--version

  A true or false value.

  Show the version of the application.

  This setting is optional.

",
}
`;

exports[`genie CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > version 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "0.1.0

",
}
`;
